--- a/style.css
+++ b/style.css
@@ -130,8 +130,7 @@ a:hover > span.code {
 }
 
 @media only screen 
-and (min-device-width: 300px) 
-and (max-device-width: 450px) {
+and (max-width: 450px) {
     #tabs {
         flex-flow: column;
         flex-wrap: nowrap;
